<resources>
    <string name="app_name">Android_Assignment</string>

    <string name="lbl_login">LOGIN</string>
    <string name="lbl_registration">REGISTRATION</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">PASSWORD</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="lbl_not_a_user_click_here">Not a user ? Click on SIGN UP here</string>
    <string name="lbl_i_am_a_user">Already a user ? Click on SIGN IN here</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="btn_forgot_password">Forgot Password</string>

    <!--Forgot password-->
    <string name="lbl_forgot_password">FORGOT PASSWORD</string>
    <string name="msg_password_reset">Password reset link will be sent to your registered email address</string>
    <string name="btn_send">SEND</string>
    <!--Forgot password-->

    <string name="lbl_first_name">FIRST NAME</string>
    <string name="lbl_last_name">LAST NAME</string>
    <string name="lbl_mobile_number">MOBILE NUMBER</string>

    <!--Home Screen-->
    <string name="lbl_welcome">Welcome</string>
    <string name="title_hey_user">Hey, User</string>


    <!--Hint-->
    <string name="hint_email">Enter email address</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_first_name">Enter First Name</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_mobile_number">Enter Mobile Number</string>
    <!--Hint-->

    <!--Button Text-->
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <!--Button Text-->

    <!--Message-->
    <string name="default_internet_message">No internet connection</string>
    <string name="msg_do_you_want_to_logout">Do you want to logout ?</string>
    <string name="msg_link_sent">Password reset link successfully sent.</string>
    <!--Message-->

    <!--  Validation Messages -->
    <string name="error_email_or_mobile">Please enter email address or mobile number</string>
    <string name="error_first_name">Please enter first name</string>
    <string name="error_last_name">Please enter last name</string>
    <string name="error_email_address">Please enter email address</string>
    <string name="error_email_address_or_mobile">Please enter email address or mobile number</string>
    <string name="error_invalid_email_address">Please enter valid email address</string>
    <string name="error_mobile_number">Please enter mobile number</string>
    <string name="error_password">Please enter password</string>
    <string name="error_invalid_password">Please enter password at least 6 characters</string>

</resources>