<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgWhite"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBgWhite"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="logo"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />


            <androidx.cardview.widget.CardView
                android:visibility="visible"
                android:id="@+id/cvLoginView"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="true"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorBgWhite"
                app:cardElevation="@dimen/dimen_5dp"
                app:cardCornerRadius="@dimen/dimen_24dp"
                android:clipToPadding="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:background="@color/colorBgBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:padding="@dimen/dimen_15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_forgot_password"
                            android:layout_gravity="center"
                            android:textSize="@dimen/dimen_14sp"
                            android:textColor="@color/textColorWhite" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorMidGray"
                            android:textSize="@dimen/dimen_10sp"
                            android:layout_gravity="start"
                            android:textAllCaps="true"
                            android:text="@string/lbl_email" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:textSize="@dimen/dimen_12sp"
                            android:textColor="@color/textColorWhite"
                            android:textColorHint="@color/textColorMidGray"
                            android:hint="@string/hint_email"
                            android:imeOptions="actionNext"
                            android:paddingTop="@dimen/dimen_10dp"
                            android:paddingBottom="@dimen/dimen_10dp"
                            android:inputType="textEmailAddress|textPersonName"
                            android:maxLength="40"
                            tools:text="John Dai" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_marginTop="-5dp"
                            android:layout_height="@dimen/dimen_1dp"
                            android:background="@color/colorBgLightGray" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnSend"
                            android:layout_marginStart="@dimen/dimen_15dp"
                            android:layout_marginEnd="@dimen/dimen_15dp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_35dp"
                            android:textColor="@color/textColorWhite"
                            android:layout_gravity="center"

                            android:textSize="@dimen/dimen_12sp"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:background="@color/colorBgLightGreen"
                            android:text="@string/btn_send" />



                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                android:layout_marginStart="@dimen/dimen_40dp"
                android:layout_marginEnd="@dimen/dimen_40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPeach"
                android:layout_gravity="center"

                android:textSize="@dimen/dimen_18sp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/msg_password_reset" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>